<resources>

    <string name="app_name">健康达人</string>
    <string name="close_service">关闭运动识别后台服务</string>

    <!-- title of each page -->
    <string name="title_dashboard">概览</string>
    <string name="title_foods">食物</string>
    <string name="title_tour_tracker">运动轨迹</string>
    <string name="title_friends">朋友</string>
    <string name="title_history_activity">跟踪记录</string>
    <string name="title_food_plan">饮食计划</string>
    <string name="title_achieve_introduce">成就一览</string>
    <string name="title_settings">设置</string>
    <string name="title_personal_info">个人信息设置</string>
    <string name="title_addfriends">寻友</string>
    <string name="title_message">消息中心</string>

    <!-- tips -->
    <string name="tip_exit">再按一次推出Healthy</string>
    <string name="tip_avg_value">平均值</string>
    <string name="tip_loading">正在加载..</string>
    <string name="default_food_calorie">0 kcal/100g</string>
    <string name="default_total_calorie">0 kcal</string>
	<string name="tip_addfriends">请输入要查找的关键字</string>
	<string name="tip_delete">删除</string>
    
    <!-- dashboard subpage -->
    <string name="tab_recent_activities">近期活动概览</string>
    <string name="tab_calories_detail">卡路里概览</string>
    <string name="step_count">步数:</string>
    <string name="duration">持续时间:</string>
    <string name="distance">距离:</string>
    <string name="speed">速度:</string>
    <string name="calories_burned">热量消耗:</string>
    <string name="btn_chart_data">查看运动详情</string>
    <string name="movement_index_string">运动指数</string>
    <string name="today_movement_string">今日指数</string>
    <string name="achievement_string">成就</string>
    <string name="more_string">健康指南</string>
    <string name="walking_string">走路</string>
	<string name="running_string">跑步</string>
	<string name="static_string">静止</string>
	<string name="browsing_string">玩手机</string>
	<string name="dashboard_consume">本月消耗卡路里</string>
	<string name="dashboard_intake">本月摄入卡路里</string>
	<string name="dashboard_sum">合计</string>
	
	<!-- achievement -->
	<string name="achievement_preintroduce">恭喜您获得了成就---</string>
    <!-- tracker -->
    <string name="start_tracker">记录运动轨迹</string>
    <string name="stop_tracker">停止记录运动轨迹</string>
    
    <!-- login&out&register -->
    <string name="register">注册账号</string>
    <string name="is_register">注册账号？</string>
    <string name="login">登录</string>
    <string name="name">账号</string>
    <string name="remember_pwd">记住密码</string>
    <string name="password">密码</string>
    <string name="rname">输入账号</string>
    <string name="rpassword">输入密码</string>
    <string name="ragainpwd">再次输入密码</string>
    <string name="after_login_title">我的朋友</string>
    <string name="add_friends">添加</string>
    <string name="register_title">注册账号</string>
    <string name="nologintext">您好，请先登陆！</string>
    <string name="setting_photo">设置头像</string>
    <string name="my_friends_text">好友列表</string>
    
    <!-- activity_foodedit -->
    <string name="spinner_choose_food">选择食物种类</string>
    
    <!-- settings -->
    <string name="personal_settings">个人信息设置</string>
    <string name="personal_describe">性别、身高、体重、步长等</string>
    <string name="personal_sex">性别</string>
    <string name="personal_age">年龄</string>
    <string name="personal_height">身高(cm)</string>
    <string name="personal_weight">体重(kg)</string>
    <string name="personal_stride">步长约为(cm)</string>
    <string name="personal_save">保存</string>
    
    <!-- friends -->
    <string name="friends_calories">好友卡路里消耗排行榜</string>
    <string name="friends_add_btn">加为好友</string>
    <string name="friends_already_send">已发送</string>
    <string name="friends_string">好友</string>
    <string name="friends_ranking">排行榜</string>
    <string name="friends_calories_ranking">卡路里月消耗排行榜</string>
    <string name="friends_item_remove">移除</string>
    <string name="friends_nearby_text">附近的人</string>
    
    <!-- message -->
    <string name="message_accept_one">收到一条来自</string>
    <string name="message_accept_two">的好友请求</string>
    <string name="message_accept">接受</string>
    <string name="message_refuse">拒绝</string>
    <string name="message_dismiss">取消</string>
    <string name="message_empty">暂无消息</string>
    
    <!-- activity -->
    <string name="stationary">静止</string>
    <string name="walking">走路</string>
    <string name="jogging">慢跑</string>
    <string name="lift">乘电梯</string>
    <string name="bicycling">骑自行车</string>
    <string name="ascendingStairs">上楼梯</string>
    <string name="descendingStairs">下楼梯</string>
    <string name="browsing">浏览手机</string>
    <string name="unknown">未知</string>
    
    <!-- loading -->
    <string name="loading_info">正在加载中…</string>
</resources>