<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/off_white"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="48dip"
            android:background="@drawable/bg_titlebar_blue"
            android:clickable="true"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/flip_menu"
                android:layout_width="54dip"
                android:layout_height="fill_parent"
                android:layout_gravity="center"
                android:background="@drawable/selector_titlebar_wrapper"
                android:clickable="true"
                android:contentDescription="@null"
                android:scaleType="centerInside"
                android:src="@drawable/ic_titlebar_flip" />

            <ImageView
                android:layout_width="2px"
                android:layout_height="fill_parent"
                android:layout_gravity="center"
                android:layout_toRightOf="@id/flip_menu"
                android:scaleType="fitXY"
                android:src="@drawable/bg_titlebar_separator" />

            <TextView
                android:id="@+id/title"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:text="@string/title_settings"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/personal_settings"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dip"
            android:background="@drawable/bg_foodplan_list"
            android:orientation="vertical"
            android:padding="10dip" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/personal_settings"
                android:textColor="@color/light_blue"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dip"
                android:text="@string/personal_describe"
                android:textColor="@color/lighter_gray"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>