<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/off_white"
        android:orientation="vertical" 
        android:clickable="true">

        <!-- 自定义的标题栏 -->
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="48dip"
            android:background="@drawable/bg_titlebar_blue"
            android:clickable="true"
            android:orientation="horizontal" >

            <!-- 退出按钮 -->

            <ImageView
                android:id="@+id/back_chart_btn"
                android:layout_width="54dip"
                android:layout_height="fill_parent"
                android:layout_gravity="center"
                android:background="@drawable/selector_titlebar_wrapper"
                android:clickable="true"
                android:scaleType="centerInside"
                android:src="@drawable/ic_titlebar_back" />

            <!-- 分割线 -->

            <ImageView
                android:layout_toRightOf="@id/back_chart_btn"
                android:layout_width="2px"
                android:layout_height="fill_parent"
                android:layout_gravity="center"
                android:scaleType="fitXY"
                android:src="@drawable/bg_titlebar_separator" />

            <!-- 标题 -->

            <TextView
                android:id="@+id/title"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:textStyle="bold" 
                android:text="@string/title_dashboard"/>

        </RelativeLayout>
        
        <ViewFlipper
            android:id="@+id/content"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center"
            android:layout_weight="1.0" 
            />

        <RadioGroup
            android:id="@+id/dashboard_category"
            android:layout_width="fill_parent"
            android:layout_height="48dip"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/dashboard_recent_activities"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="@drawable/bg_tabsbar"
                android:button="@null"
                android:checked="true"
                android:gravity="center"
                android:text="@string/tab_recent_activities"
                android:textColor="#ff333333"
                android:textSize="18.0sp" />

            <RadioButton
                android:id="@+id/dashboard_calories_detail"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="@drawable/bg_tabsbar"
                android:button="@null"
                android:checked="false"
                android:gravity="center"
                android:text="@string/tab_calories_detail"
                android:textColor="#ff333333"
                android:textSize="18.0sp" />
        </RadioGroup>
    </LinearLayout>

</LinearLayout>